# price-alert-engine

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/api/: routes_assets.py  routes_holdings.py  routes_strategies.py
app/domain/: models.py  schemas.py  signals.py
app/engine/: decision.py  run.py  worker.py
app/notify/: telegram.py
app/observability/: logging.py
app/persistence/: db.py  repo.py
app/providers/: aggregator.py  base.py  binance.py  coinbase.py  coingecko.py  features.py
docker/: Dockerfile
